@@ -1,5 +1,7 @@
 = master
 
+* Make assets plugin :early_hints option follow Rack 3 SPEC if using Rack 3 (jeremyevans)
+
 * Correctly parse Ruby 3.4 backtraces in exception_page plugin (jeremyevans)
 
 * Support :until and :seconds option in hmac_paths plugin, for paths valid only until a specific time (jeremyevans)
